[gd_scene load_steps=5 format=3 uid="uid://m6pp0f8vbp6v"]

[ext_resource type="Texture2D" uid="uid://bb5bk1f3rsjg6" path="res://assets/circle.png" id="1_bcmba"]
[ext_resource type="Script" path="res://src/water_button.gd" id="1_n0td4"]
[ext_resource type="PackedScene" uid="uid://cctk3mlexccpp" path="res://src/bar_component.tscn" id="2_ehy8c"]
[ext_resource type="AudioStream" uid="uid://b8lpfdav8o3vu" path="res://assets/sound/lock.wav" id="4_sligs"]

[node name="WaterButton" type="Node2D" groups=["Button"]]
script = ExtResource("1_n0td4")

[node name="LineClip" type="Polygon2D" parent="."]
clip_children = 1
z_index = 1
z_as_relative = false
invert_enabled = true
invert_border = 9999.0
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[node name="Line2D" type="Line2D" parent="LineClip"]
default_color = Color(0.160784, 0.25098, 0.219608, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Circle" type="Sprite2D" parent="."]
modulate = Color(0.423529, 0.423529, 0.423529, 1)
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_bcmba")

[node name="Circle2" type="Sprite2D" parent="."]
modulate = Color(0.159958, 0.25, 0.220339, 1)
scale = Vector2(0.09375, 0.09375)
texture = ExtResource("1_bcmba")

[node name="Circle3" type="Sprite2D" parent="."]
modulate = Color(0.159958, 0.25, 0.220339, 1)
self_modulate = Color(1, 1, 1, 0)
z_index = 1
z_as_relative = false
position = Vector2(3.8147e-06, 4.76837e-07)
texture = ExtResource("1_bcmba")

[node name="Polygon2D" type="Polygon2D" parent="Circle3"]
position = Vector2(-3.8147e-06, -4.76837e-07)
invert_border = 3.0
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 24, 28, 28, 28, -28, -28, -28, -28, 28, 28, 28, 32, 24, 32, 32, -32, 32)

[node name="BarComponent" parent="." instance=ExtResource("2_ehy8c")]
active_color = Color(0.886275, 0.32549, 0.25098, 1)

[node name="Activate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sligs")
